[project]
name = "github-readme-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "sambanova>=1.4.0",
    "uvicorn>=0.40.0",
]
